# mito

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.slim  INSTALL.md  README.md  requirements-docker.txt
.claude/: settings.local.json
.github/workflows/: deploy-mito-ai-cli.yml  deploy-mito-ai-core.yml  deploy-mito-ai-mcp.yml  deploy-mito-ai-python-tool-executor.yml  deploy-mito-ai.yml  deploy-mitosheet-mitoinstaller.yml  deploy-mitosheet-vscode.yml  forbid-test-only.yml  license-header.yml  lint-mito-ai-typescript.yml  lint-mitosheet-typescript.yml  pack-mito-ai-mcp-mcpb.yml  test-abacus-llm-providers.yml  test-azure-llm-providers.yml  test-litellm-llm-providers.yml  test-llm-providers.yml  test-mito-ai-backend.yml  test-mito-ai-cli.yml  test-mito-ai-core-backend.yml  test-mito-ai-core-mypy.yml  test-mito-ai-frontend.yml  test-mito-ai-jest.yml  test-mito-ai-mcp.yml  test-mito-ai-mypy.yml  test-mito-sql-cell.yml  test-mitoinstaller.yml  test-mitosheet-frontend.yml  test-mitosheet-mypy.yml  test-mitosheet-python.yml
deployment/: README.md
mito-ai/: pyproject.toml
mito-ai-core/: pyproject.toml
mito-ai-core/mito_ai_core/: constants.py  provider_manager.py
mito-ai-core/mito_ai_core/clients/: open_ai_utils.py  openai_client.py
mito-ai-core/mito_ai_core/utils/: mlflow_observability.py  model_utils.py
mito-ai/mito_ai/db/: utils.py
mito-ai/mito_ai/db/crawlers/: base_crawler.py  bigquery.py  constants.py  spark.py
mito-ai/src/Extensions/SettingsManager/database/: ConnectionForm.tsx  DatabasePage.tsx  model.ts
mito-ai/src/components/: ModelSelector.tsx
mito-ai/src/utils/: models.ts
mitosheet-helpers/mitosheet_helper_pro/: README.md
